--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         <p class="popular__subtitle"></p>
         <div class="popular__container">
              <div class="course-card">
-                <img src="./image/pro_img1.jpg" alt="image>
+                <img src="./image/pro_img1.jpg" alt="image">
                 <h3>Python Data Visualisation Masterclass 2025</h3>
                 <p>Col Steel</p>
                 <p>4.9 ⭐⭐⭐⭐</p>
