--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <p>Pick the best fit</p>
         <div class="recommended__container">
             <div class="course-card">
-                <img src="./image/pro_img1.jpg" alt="image">
+                <img src="F:\pc apps\html,css,js\FSWD\CSS\Portfolio\udemy-clone\image\pro_img1.jpg" alt="image">
                 <h3>Python Data Visualisation Masterclass 2025</h3>
                 <p>Col Steel</p>
                 <p>4.9 ⭐⭐⭐⭐</p>
