--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </div>
     <!-- sale image -->
     <div class="sale-img">
-        <img src="F:\pc apps\html,css,js\FSWD\CSS\Portfolio\udemy-clone\image\sale-img.jpg" alt="">
+        <img src="pro_img1.jpg" alt="">
     </div>
     <!-- Recommended -->
     <div class="recommended">
