--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </div>
     <!-- sale image -->
     <div class="sale-img">
-        <img src="pro_img1.jpg" alt="">
+        <img src="sale-img.jpg" alt="">
     </div>
     <!-- Recommended -->
     <div class="recommended">
