--- a/index.html
+++ b/index.html
@@ -54,14 +54,14 @@
         <p>Pick the best fit</p>
         <div class="recommended__container">
             <div class="course-card">
-                <img src="F:\pc apps\html,css,js\FSWD\CSS\Portfolio\udemy-clone\image\pro_img1.jpg" alt="image">
+                <img src="pro_img1.jpg" alt="image">
                 <h3>Python Data Visualisation Masterclass 2025</h3>
                 <p>Col Steel</p>
                 <p>4.9 ⭐⭐⭐⭐</p>
                 <p>599 <del>1799</del></p>
             </div>
             <div class="course-card">
-                <img src="./image/pro_img2.jpg" alt="image">
+                <img src="pro_img2.jpg" alt="image">
                 <h3 style=>Web Development Bootcamp 2025</h3>
                 <p>Col Steel</p>
                 <p>4 ⭐⭐⭐⭐</p>
@@ -75,7 +75,7 @@
                 <p>449 <del>1499</del></p>
             </div>
             <div class="course-card">
-                <img src="./image/pro_img4.jpg" alt="image">
+                <img src="pro_img4.jpg" alt="image">
                 <h3>Basic to advance programming with EMC</h3>
                 <p>Col Steel</p>
                 <p>4.5 ⭐⭐⭐⭐</p>
@@ -107,56 +107,56 @@
         <p class="popular__subtitle"></p>
         <div class="popular__container">
              <div class="course-card">
-                <img src="./image/pro_img1.jpg" alt="image">
+                <img src="pro_img1.jpg" alt="image">
                 <h3>Python Data Visualisation Masterclass 2025</h3>
                 <p>Col Steel</p>
                 <p>4.9 ⭐⭐⭐⭐</p>
                 <p>599 <del>1799</del></p>
             </div>
             <div class="course-card">
-                <img src="./image/pro_img2.jpg" alt="image">
+                <img src="pro_img2.jpg" alt="image">
                 <h3 style=>Web Development Bootcamp 2025</h3>
                 <p>Col Steel</p>
                 <p>4 ⭐⭐⭐⭐</p>
                 <p>799 <del>1899</del></p>
             </div>
             <div class="course-card">
-                <img src="./image/pro_img3.jpg" alt="image">
+                <img src="pro_img3.jpg" alt="image">
                 <h3>Master UI/UX designing with sigma</h3>
                 <p>Col Steel</p>
                 <p>3.5 ⭐⭐⭐</p>
                 <p>449 <del>1499</del></p>
             </div>
             <div class="course-card">
-                <img src="./image/pro_img4.jpg" alt="image">
+                <img src="pro_img4.jpg" alt="image">
                 <h3>Basic to advance programming with EMC</h3>
                 <p>Col Steel</p>
                 <p>4.5 ⭐⭐⭐⭐</p>
                 <p>999 <del>1999</del></p>
             </div>
             <div class="course-card">
-                <img src="./image/pro_img2.jpg" alt="image">
+                <img src="pro_img2.jpg" alt="image">
                 <h3 style=>Web Development Bootcamp 2025</h3>
                 <p>Col Steel</p>
                 <p>4 ⭐⭐⭐⭐</p>
                 <p>799 <del>1899</del></p>
             </div>
             <div class="course-card">
-                <img src="./image/pro_img4.jpg" alt="image">
+                <img src="pro_img4.jpg" alt="image">
                 <h3>Basic to advance programming with EMC</h3>
                 <p>Col Steel</p>
                 <p>4.5 ⭐⭐⭐⭐</p>
                 <p>999 <del>1999</del></p>
             </div>
             <div class="course-card">
-                <img src="./image/pro_img1.jpg" alt="image">
+                <img src="pro_img1.jpg" alt="image">
                 <h3>Python Data Visualisation Masterclass 2025</h3>
                 <p>Col Steel</p>
                 <p>4.9 ⭐⭐⭐⭐</p>
                 <p>599 <del>1799</del></p>
             </div>
             <div class="course-card">
-                <img src="./image/pro_img2.jpg" alt="image">
+                <img src="pro_img2.jpg" alt="image">
                 <h3 style=>Web Development Bootcamp 2025</h3>
                 <p>Col Steel</p>
                 <p>4 ⭐⭐⭐⭐</p>
