--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <p>799 <del>1899</del></p>
             </div>
             <div class="course-card">
-                <img src="./image/pro_img3.jpg" alt="image">
+                <img src="pro_img3.jpg" alt="image">
                 <h3>Master UI/UX designing with sigma</h3>
                 <p>Col Steel</p>
                 <p>3.5 ⭐⭐⭐</p>
