--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </div>
     <!-- sale image -->
     <div class="sale-img">
-        <img src="F:\pc apps\html,css,js\FSWD\CSS\Portfolio\udemy-clone\image\sale-img.jpg" alt="">
+        <img src=".\image\sale-img.jpg" alt="">
         <div class="sale-img__offer">
         <h2>Udemy flash sale! 24 hours to save.</h2>
             <p>Get the top Courses for just 499. Just one day to save
@@ -68,7 +68,7 @@
         <p>Pick the best fit</p>
         <div class="recommended__container">
             <div class="course-card">
-                <img src="F:\pc apps\html,css,js\FSWD\CSS\Portfolio\udemy-clone\image\pro_img1.jpg" alt="image">
+                <img src=".\image\pro_img1.jpg" alt="image">
                 <h3>Python Data Visualisation Masterclass 2025</h3>
                 <p>Col Steel</p>
                 <p>4.9 ⭐⭐⭐⭐</p>
