--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
         </div>
         <div class="footer__two">
             <h1>Udemy</h1>
-            <p>&copy; Udemy, Inc </p>
+            <p>&copy; Udemy, Inc laad</p>
         </div>
      </div>
 
